# py_pg

./: .gitignore  .gitmodules  Dockerfile  README.md  cheuk.txt  init.sql  luca.txt  normal.sql  notebook.html  notebook.py  pycon_ire.py  pyproject.toml
src/: my_fwd.py
src/dds/: cve_utils.py  dummy_fdw.py  numeric.py  web.py
talk/assets/: header.json  header.jsonp
talk/assets/0E78B6DB-5942-4B45-A942-EDBC2B436398/: 0E78B6DB-5942-4B45-A942-EDBC2B436398.json  0E78B6DB-5942-4B45-A942-EDBC2B436398.jsonp
talk/assets/16AD05D0-49EE-44B9-8151-CD0C206CC803/: 16AD05D0-49EE-44B9-8151-CD0C206CC803.json  16AD05D0-49EE-44B9-8151-CD0C206CC803.jsonp
talk/assets/19768374-E9F7-4BF7-8A6C-B138C473A751/: 19768374-E9F7-4BF7-8A6C-B138C473A751.json  19768374-E9F7-4BF7-8A6C-B138C473A751.jsonp
talk/assets/2B40F1B9-1D03-4E29-A7E9-7AACEA29FE73/: 2B40F1B9-1D03-4E29-A7E9-7AACEA29FE73.json  2B40F1B9-1D03-4E29-A7E9-7AACEA29FE73.jsonp
talk/assets/41E36F80-9064-40A1-891B-2130D534DD27/: 41E36F80-9064-40A1-891B-2130D534DD27.json  41E36F80-9064-40A1-891B-2130D534DD27.jsonp
talk/assets/47A4867D-14F1-47A6-A065-48B9A5A2958F/: 47A4867D-14F1-47A6-A065-48B9A5A2958F.json  47A4867D-14F1-47A6-A065-48B9A5A2958F.jsonp
talk/assets/4F6F454C-9CB8-418C-AB11-3C149722DFEF/: 4F6F454C-9CB8-418C-AB11-3C149722DFEF.json  4F6F454C-9CB8-418C-AB11-3C149722DFEF.jsonp
talk/assets/65AFB0E6-9648-4281-AC7F-425687CC6B21/: 65AFB0E6-9648-4281-AC7F-425687CC6B21.json  65AFB0E6-9648-4281-AC7F-425687CC6B21.jsonp
talk/assets/7094FD79-460A-4F35-B3CF-56F37A847197/: 7094FD79-460A-4F35-B3CF-56F37A847197.json  (+1 more)
(+35 files in other folders)
