[project]
name = "py-pg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.0",
    "greenlet>=3.2.4",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.3",
    "marimo[recommended]>=0.17.8",
    "msgspec>=0.19.0",
    "numpy>=2.3.3",
    "nvdlib>=0.8.3",
    "pandas>=2.3.2",
    "polars>=1.35.2",
    "psycopg>=3.2.12",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "typing-extensions>=4.15.0",
]
